<resources>
    <string name="appName">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="mediaLib">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="darkTheme">Темная тема</string>
    <string name="support">Написать в поддержку</string>
    <string name="shareApp">Поделиться приложением</string>
    <string name="termsOfUse">Пользовательское соглашение</string>
    <string name="supportMessage">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="supportMessageTitle">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="supportEmail">lortrem32@gmail.com</string>
    <string name="urlTermsOfUse">https://yandex.ru/legal/practicum_offer/</string>
    <string name="urlToShare">https://practicum.yandex.ru/android-developer/</string>
    <string name="reload">Обновить</string>
    <string name="nothingWasFound">Ничего не нашлось</string>
    <string name="communication_problems">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="baseUrl">https://itunes.apple.com</string>
    <string name="searchHistory">Вы искали</string>
    <string name="clearHistory">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="trackTime">00:00</string>
    <string name="emptyMedialib">Ваша медиатека пуста</string>
    <string name="newPlaylist">Новый плейлист</string>
    <string name="noPlaylists">Вы не создали\nни одного плейлиста</string>
    <string name="favoriteTracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="finishCreating">Завершить создание плейлиста?</string>
    <string name="finshWarningMessage">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="AddedToPlaylist">Добавлено в плейлист</string>
    <string name="AlreadyAdded">Трек уже добавлен в плейлист</string>
    <string name="share">Поделиться</string>
    <string name="editInfo">Редактировать информацию</string>
    <string name="deletePlaylist">Удалить плейлист</string>
    <string name="wantDeleteTrack">Хотите удалить трек?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="wantDeletePlaylist">Хотите удалить плейлист</string>
    <string name="minute1">" минута"</string>
    <string name="minutes">" минуты"</string>
    <string name="minute">" минут"</string>
    <string name="thereAreNoTracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="save">Сохранить</string>
</resources>