<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorOtherScreens">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <Button
            android:id="@+id/search_to_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@android:color/transparent"
            android:contentDescription="@string/settings"
            app:icon="@drawable/ic_arrow_back"
            app:iconTint="?attr/colorOnPrimary"
            app:iconSize="24dp"
            app:iconGravity="textStart"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:padding="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:fontFamily="@font/ys_display_medium"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/search"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="22sp" />
        </FrameLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/search_background"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15.75dp"
                android:layout_height="14dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="16dp"
                android:src="@drawable/search_icon"/>

            <EditText
                android:id="@+id/search_text_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/search"
                android:maxLines="1"
                android:textColorHint="?attr/colorOnPrimaryContainer"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/cursor_color"
                android:imeOptions="actionDone"
                android:singleLine="true"/>

            <Button
                android:id="@+id/button_clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:layout_weight="3"
                app:icon="@drawable/ic_clear_button"
                app:iconTint="?attr/colorOnPrimaryContainer"
                app:iconSize="16dp"
                app:iconGravity="textStart"
                android:visibility="gone"/>
        </LinearLayout>
    </FrameLayout>
    <TextView
        android:id="@+id/search_history_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="16dp"
        android:text="@string/searchHistory"
        android:textSize="19sp"
        android:textColor="?attr/colorOnPrimary"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:visibility="gone"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trackList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginBottom="48dp"/>

        <LinearLayout
            android:id="@+id/placeholder_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="100dp"
            android:visibility="gone">
            <ImageView
                android:id="@+id/errorImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/errorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:textSize="19sp"
                android:textColor="?attr/colorOnPrimary"
                android:fontFamily="@font/ys_display_medium"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/reloadButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_gravity="center"
                android:backgroundTint="?attr/colorOnPrimary"
                android:textColor="?attr/colorOtherScreens"
                android:textSize="14sp"
                android:text="@string/reload"
                android:visibility="gone"/>
        </LinearLayout>
        <Button
            android:id="@+id/clearHistoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal|bottom"
            android:backgroundTint="?attr/colorOnPrimary"
            android:textColor="?attr/colorOtherScreens"
            android:textSize="14sp"
            android:text="@string/clearHistory"
            android:visibility="gone"/>
    </FrameLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"/>
</LinearLayout>
