<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mediumGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.067" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.933" />

    <LinearLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/returnButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="4dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back"
            app:tint="?attr/colorOnPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_vertical"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@string/newPlaylist"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="22sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/playlistCover"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        android:background="@drawable/playlist_creation_bg"
        android:scaleType="centerCrop"/>

    <EditText
        android:id="@+id/playlistName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/playlistCover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edit_text_selector"
        android:paddingStart="16dp"
        android:hint="Название*"/>

    <EditText
        android:id="@+id/playlistDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/playlistName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edit_text_selector"
        android:hint="@string/description"
        android:paddingStart="16dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="32dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="8dp"
        android:background="@drawable/tap_selector"
        android:enabled="false"
        android:text="@string/create"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>